--- a/analysis/disjSyl_analysis_script.Rmd
+++ b/analysis/disjSyl_analysis_script.Rmd
@@ -34,19 +34,22 @@ xdata$z.age <- scale(xdata$age)
 xdata$z.trial <- scale(xdata$trial)
 # transform character variables into factors
 xdata$subj.id <- as.factor(xdata$subj.id)
-xdata$condition <- as.factor(xdata$condition) # only for Experiment 3 and 4
-xdata$order <- as.factor(xdata$order) # only for Experiment 3 and 4
 xdata$sex <- as.factor(xdata$sex)
-# create dummy variables and centered dummy variables for the factors which are included in random slopes
-xdata$condition.dummy <- as.numeric(xdata$condition == levels(xdata$condition)[2])
-xdata$condition.c <- xdata$condition.dummy - mean(xdata$condition.dummy)
+
+# only for experiment 3 and 4
+xdata$condition <- as.factor(xdata$condition) 
+xdata$order <- as.factor(xdata$order) 
+
+#only for the secondary analysis (comparison of the test conditions) of experiment 3 and 4 
+xdata$experiment <- as.factor(xdata$experiment)
+
 ```
 
 **For Experiment 1 & 2**
 *Fitting the intercept-only model*
 ```{r}
 
-# this control term will be needed in case of convergance issues
+# this control term will be needed in case of convergence issues
 contr <- glmerControl(optimizer = "bobyqa", optCtrl = list(maxfun = 10000000))
 
 chance.test <- glmer(correct ~ 1 +
@@ -58,25 +61,11 @@ summary(chance.test)
 ```
 
 
-**For Experiment 3 and 4**
+**For Experiment 3**
 
-**Chance level (0.5) comparision for the test condition**
-*Subsetting the data set*
-```{r}
-xdata.test <- subset(xdata, xdata$condition == "test")
-```
+The dependent variable for this analysis will be chimpanzees’ choice of the correct cup, i.e. the cup next to the cup which was shown to be empty (Exp. 3).
 
-*Fitting the intercept only model*
-```{r}
-chance.test <- glmer(correct ~ 1 +
-  (1 + z.trial || subj.id),
-data = xdata.test, family = binomial, control = contr
-)
-
-summary(chance.test)
-```
-
-**Comparision of test condition and control condition**
+**Comparison of test condition and control condition**
 *Fitting the full model*
 ```{r echo=FALSE}
 # this control term will be needed in case of convergance issues
@@ -84,13 +73,13 @@ contr <- glmerControl(optimizer = "bobyqa", optCtrl = list(maxfun = 10000000))
 
 # fit full model:
 full <- glmer(correct ~ condition + z.age + sex + z.trial + order +
-  (1 + condition.c + z.trial || subj.id),
+  (1 + condition + z.trial || subj.id),
 data = xdata, family = binomial, control = contr
 )
-## in this model we did not include the correlation of random intercept and random slopes (indicated by ||), because it increases the chance that the model converges. However, with the real data we will first try to fit the model with the correlations and only reduce it in case we have convergance issues or sigular fit messages.
+## in this model we did not include the correlation of random intercept and random slopes (indicated by ||), because it increases the chance that the model converges. However, with the real data we will first try to fit the model with the correlations and only reduce it in case we have convergence issues or singular fit messages.
 ```
 
-*Checking whether assumptions are fullfilled*
+*Checking whether assumptions are fulfilled*
 ```{r}
 
 # check for colliniarity
@@ -111,7 +100,8 @@ m.stab.plot(round(m.stab.b$summary[, -1], 3))
 *Fitting the null model*
 ```{r}
 # fit null model:
-null <- glmer(correct ~ z.trial + order + (1 + condition.c + z.trial || subj.id),
+null <- glmer(correct ~ z.age + sex + z.trial + order + 
+    (1 + condition + z.trial || subj.id),
   data = xdata, family = binomial, control = contr
 )
 ```
@@ -123,7 +113,6 @@ round(anova(full, null, test = "Chisq"), 3)
 
 *Comparing full and reduced models to get the effects of single predictors*
 ```{r}
-
 tests <- drop1p(
   model.res = full, para = F, data = NULL, contr = contr,
   n.cores = c("all-1"), to.del = NULL
@@ -144,7 +133,6 @@ round(summary(full)$coefficients, 3)
 
 *Calculating confidence intervals with 1000 bootstraps*
 ```{r}
-
 # perform bootstraps for all predictors
 boot.res <- boot.glmm.pred(
   model.res = full, excl.warnings = T,
@@ -163,10 +151,10 @@ xdata$sex.dummy <- as.numeric(xdata$sex == levels(xdata$sex)[2])
 xdata$sex.c <- xdata$sex.dummy - mean(xdata$sex.dummy)
 # fit model with centered predictors
 full.plot <- glmer(correct ~ condition + z.age + sex.c + z.trial + order.c +
-  (1 + condition.c + z.trial || subj.id),
+  (1 + condition + z.trial || subj.id),
 data = xdata, family = binomial, control = contr
 )
-# performm bootstrap
+# perform bootstrap
 boot.res.plot <- boot.glmm.pred(
   model.res = full.plot, excl.warnings = T,
   nboots = 1000, para = T, level = 0.95,
@@ -178,6 +166,240 @@ xx
 m.stab.plot(round(boot.res.plot$ci.estimates, 3))
 ```
 
+**For Experiment 4**
+The dependent variable for this analysis will be chimpanzees’ choice of the other pair, i.e. the cups from which the food was removed (Exp.4).
 
+**Comparison of test condition and control condition for each experiment**
+*Fitting the full model*
+```{r echo=FALSE}
+# this control term will be needed in case of convergance issues
+contr <- glmerControl(optimizer = "bobyqa", optCtrl = list(maxfun = 10000000))
 
+# fit full model:
+full <- glmer(other_pair ~ condition + z.age + sex + z.trial + order +
+  (1 + condition + z.trial || subj.id),
+data = xdata, family = binomial, control = contr
+)
+## in this model we did not include the correlation of random intercept and random slopes (indicated by ||), because it increases the chance that the model converges. However, with the real data we will first try to fit the model with the correlations and only reduce it in case we have convergence issues or sigular fit messages.
+```
+
+*Checking whether assumptions are fulfilled*
+```{r}
+
+# check for colliniarity
+xx <- lm(other_pair ~ condition + z.age + sex + z.trial + order,
+  data = xdata
+)
+vif(xx)
+# checking random intercept and slopes
+summary(full)$varcor
+ranef.diagn.plot(full)
+# checking model stability
+m.stab.b <- glmm.model.stab(model.res = full, contr = contr, use = c("subj.id"))
+m.stab.b$detailed$warnings
+xx <- as.data.frame(round(m.stab.b$summary[, -1], 3))
+m.stab.plot(round(m.stab.b$summary[, -1], 3))
+```
+
+*Fitting the null model*
+```{r}
+# fit null model:
+null <- glmer(correct ~ z.age + sex + z.trial + order + 
+    (1 + condition + z.trial || subj.id),
+  data = xdata, family = binomial, control = contr
+)
+```
+
+*Comparing full and null model*
+```{r}
+round(anova(full, null, test = "Chisq"), 3)
+```
+
+*Comparing full and reduced models to get the effects of single predictors*
+```{r}
+tests <- drop1p(
+  model.res = full, para = F, data = NULL, contr = contr,
+  n.cores = c("all-1"), to.del = NULL
+)
+round(tests$drop1.res, 3)
+## graphical depiction of the effects
+plot(effect("condition", full))
+plot(effect("z.age", full))
+plot(effect("sex", full))
+plot(effect("z.trial", full))
+plot(effect("order", full))
+```
+
+*Looking at the estimates of the fixed effects*
+```{r}
+round(summary(full)$coefficients, 3)
+```
+
+*Calculating confidence intervals with 1000 bootstraps*
+```{r}
+# perform bootstraps for all predictors
+boot.res <- boot.glmm.pred(
+  model.res = full, excl.warnings = T,
+  nboots = 1000, para = T, level = 0.95
+)
+round(boot.res$ci.estimates, 3)
+xx <- as.data.frame(round(boot.res$ci.estimates, 3))
+xx
+m.stab.plot(round(boot.res$ci.estimates, 3))
+
+# perform bootstraps for the main predictor of interest: condition (with the other predictors being at their average), this is necessary to plot the effect of condition
+# dummy code and center all factors but condition
+xdata$order.dummy <- as.numeric(xdata$order == levels(xdata$order)[2])
+xdata$order.c <- xdata$order.dummy - mean(xdata$order.dummy)
+xdata$sex.dummy <- as.numeric(xdata$sex == levels(xdata$sex)[2])
+xdata$sex.c <- xdata$sex.dummy - mean(xdata$sex.dummy)
+# fit model with centered predictors
+full.plot <- glmer(other_pair ~ condition + z.age + sex.c + z.trial + order.c +
+  (1 + condition + z.trial || subj.id),
+data = xdata, family = binomial, control = contr
+)
+# perform bootstrap
+boot.res.plot <- boot.glmm.pred(
+  model.res = full.plot, excl.warnings = T,
+  nboots = 1000, para = T, level = 0.95,
+  use = c("condition")
+)
+round(boot.res.plot$ci.estimates, 3)
+xx <- as.data.frame(round(boot.res.plot$ci.estimates, 3))
+xx
+m.stab.plot(round(boot.res.plot$ci.estimates, 3))
+```
+
+**Secondary analysis for experiment 3 and 4**
+
+*Fitting the intercept-only model for the test condition of Experiment 3*
+```{r}
+
+# this control term will be needed in case of convergence issues
+contr <- glmerControl(optimizer = "bobyqa", optCtrl = list(maxfun = 10000000))
+
+chance.test.exp3 <- glmer(correct ~ 1 +
+  (1 + z.trial || subj.id),
+data = xdata, family = binomial, control = contr
+)
+
+summary(chance.test.exp3)
+``` 
+
+*Fitting the intercept-only model for the test condition of Experiment 4*
+```{r}
+
+# this control term will be needed in case of convergence issues
+contr <- glmerControl(optimizer = "bobyqa", optCtrl = list(maxfun = 10000000))
+
+chance.test.exp4 <- glmer(other_pair ~ 1 +
+  (1 + z.trial || subj.id),
+data = xdata, family = binomial, control = contr
+)
+
+summary(chance.test.exp4)
+```
+
+*Comparison of the test condition of experiment 3 and 4*
+
+The dependent variable for this analysis will be chimpanzees’ choice of the other pair, i.e. the cups next to the cup which was shown to be empty (Exp. 3) or from which the food was removed (Exp.4).
+The factor order, refers to the of experiments (coded as factor: Exp3-first, Exp4-first).
+
+```{r echo=FALSE}
+# this control term will be needed in case of convergance issues
+contr <- glmerControl(optimizer = "bobyqa", optCtrl = list(maxfun = 10000000))
+
+# fit full model:.
+full <- glmer(other_pair ~ experiment + z.age + sex + z.trial + order +
+  (1 + experiment + z.trial || subj.id),
+data = xdata.test.3.4, family = binomial, control = contr
+)
+## in this model we did not include the correlation of random intercept and random slopes (indicated by ||), because it increases the chance that the model converges. However, with the real data we will first try to fit the model with the correlations and only reduce it in case we have convergence issues or singular fit messages.
+```
+
+*Checking whether assumptions are fulfilled*
+```{r}
+# check for colliniarity
+xx <- lm(other_pair ~ experiment + z.age + sex + z.trial + order,
+  data = xdata.test.3.4
+)
+vif(xx)
+# checking random intercept and slopes
+summary(full)$varcor
+ranef.diagn.plot(full)
+# checking model stability
+m.stab.b <- glmm.model.stab(model.res = full, contr = contr, use = c("subj.id"))
+m.stab.b$detailed$warnings
+xx <- as.data.frame(round(m.stab.b$summary[, -1], 3))
+m.stab.plot(round(m.stab.b$summary[, -1], 3))
+```
+
+*Fitting the null model*
+```{r}
+# fit null model:
+null <- glmer(other_pair ~ z.age + sex + z.trial + order + 
+  (1 + experiment + z.trial || subj.id),
+  data = xdata.test.3.4, family = binomial, control = contr
+)
+```
+
+*Comparing full and null model*
+```{r}
+round(anova(full, null, test = "Chisq"), 3)
+```
+
+*Comparing full and reduced models to get the effects of single predictors*
+```{r}
+tests <- drop1p(
+  model.res = full, para = F, data = NULL, contr = contr,
+  n.cores = c("all-1"), to.del = NULL
+)
+round(tests$drop1.res, 3)
+## graphical depiction of the effects
+plot(effect("experiment", full))
+plot(effect("z.age", full))
+plot(effect("sex", full))
+plot(effect("z.trial", full))
+plot(effect("order", full))
+```
+
+*Looking at the estimates of the fixed effects*
+```{r}
+round(summary(full)$coefficients, 3)
+```
+
+*Calculating confidence intervals with 1000 bootstraps*
+```{r}
+# perform bootstraps for all predictors
+boot.res <- boot.glmm.pred(
+  model.res = full, excl.warnings = T,
+  nboots = 1000, para = T, level = 0.95
+)
+round(boot.res$ci.estimates, 3)
+xx <- as.data.frame(round(boot.res$ci.estimates, 3))
+xx
+m.stab.plot(round(boot.res$ci.estimates, 3))
+
+# perform bootstraps for the main predictor of interest: experiment (with the other predictors being at their average), this is necessary to plot the effect of experiment
+# dummy code and center all factors but condition
+xdata$order.dummy <- as.numeric(xdata$order == levels(xdata$order)[2])
+xdata$order.c <- xdata$order.dummy - mean(xdata$order.dummy)
+xdata$sex.dummy <- as.numeric(xdata$sex == levels(xdata$sex)[2])
+xdata$sex.c <- xdata$sex.dummy - mean(xdata$sex.dummy)
+# fit model with centered predictors
+full.plot <- glmer(other_pair ~ experiment + z.age + sex.c + z.trial + order.c +
+  (1 + experiment + z.trial || subj.id),
+data = xdata.test.3.4, family = binomial, control = contr
+)
+# perform bootstrap
+boot.res.plot <- boot.glmm.pred(
+  model.res = full.plot, excl.warnings = T,
+  nboots = 1000, para = T, level = 0.95,
+  use = c("experiment")
+)
+round(boot.res.plot$ci.estimates, 3)
+xx <- as.data.frame(round(boot.res.plot$ci.estimates, 3))
+xx
+m.stab.plot(round(boot.res.plot$ci.estimates, 3))
+```
  
