--- a/analysis/disjSyl_analysis_followup_script.Rmd
+++ b/analysis/disjSyl_analysis_followup_script.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "disjSyl_analysis_followup_script"
 author: "Lou Haux, Hanna Schleihauf, Christoph Völter"
-date: "8/12/2021"
+date: "8/30/2021"
 output:   html_document:
     theme: united
     toc: yes
@@ -70,11 +70,11 @@ The dependent variable for this analysis is chimpanzees’ choice of the other p
 contr <- glmerControl(optimizer = "bobyqa", optCtrl = list(maxfun = 10000000))
 
 # fit full model:
-full <- glmer(other_pair ~ condition + experience + z.age + sex + z.trial + order +
-  (1 + condition.code + z.trial || subj.id),
+full <- glmer(other_pair ~ condition + z.age + sex + z.trial + order +
+  (1 + condition.code + z.trial | subj.id),
 data = xdata, family = binomial, control = contr
 )
-## in this model we did not include the correlation of random intercept and random slopes (indicated by ||), because it increases the chance that the model converges. 
+## in this model we did include the correlation of random intercept and random slopes 
 ```
 
 *singular fit warnings*
@@ -84,45 +84,69 @@ data = xdata, family = binomial, control = contr
 summary(full)$varcor
 ```
 
-#2 exclude random slope of z.trials
+#2 exclude correlations
 ```{r, echo=FALSE}
 contr <- glmerControl(optimizer = "bobyqa", optCtrl = list(maxfun = 10000000))
 
 # fit full model:
-full.1 <- glmer(other_pair ~ condition + experience + z.age + sex + z.trial + order +
+full.1 <- glmer(other_pair ~ condition + z.age + sex + z.trial + order +
+  (1 + condition.code + z.trial || subj.id),
+data = xdata, family = binomial, control = contr
+)
+
+summary(full.1)$varcor
+## in this model we did not include the correlation of random intercept and random slopes 
+```
+
+#3 exclude random slope of z.trials
+```{r, echo=FALSE}
+contr <- glmerControl(optimizer = "bobyqa", optCtrl = list(maxfun = 10000000))
+
+# fit full model:
+full.2 <- glmer(other_pair ~ condition + z.age + sex + z.trial + order +
   (1 + condition.code || subj.id),
 data = xdata, family = binomial, control = contr
 )
+
+summary(full.2)$varcor
+## in this model we did not include the correlation of random intercept and random slopes 
 ```
 
-#3 exclude random slope of condition
+#4 exclude random slope of condition
 ```{r, echo=FALSE}
 contr <- glmerControl(optimizer = "bobyqa", optCtrl = list(maxfun = 10000000))
 
 # fit full model:
-full.2 <- glmer(other_pair ~ condition + experience + z.age + sex + z.trial + order +
+full.3 <- glmer(other_pair ~ condition + z.age + sex + z.trial + order +
   (1 | subj.id),
 data = xdata, family = binomial, control = contr
 )
+
+summary(full.3)$varcor
 ```
 
-# 4 check log-likelihood
+# 5 check log-likelihood
 ```{r, echo=FALSE}
 logLik(full)
 
 logLik(full.1)
 
 logLik(full.2)
+
+logLik(full.3)
 # The log-likelihood reveals identical values
 ```
 
-#5 check fixed effects
+#6 check fixed effects
 ```{r, echo=FALSE}
 round(summary(full)$coefficients, 3)
 
 round(summary(full.1)$coefficients, 3)
 
 round(summary(full.2)$coefficients, 3)
+
+round(summary(full.3)$coefficients, 3)
+
 # There do not seem to be substantial differences
 ```
 
@@ -145,8 +169,8 @@ m.stab.plot(round(m.stab.b$summary[, -1], 3))
 *Fitting the null model*
 ```{r, echo=FALSE}
 # fit null model:
-null <- glmer(other_pair ~ experience + z.age + sex + z.trial + order +
-  (1 + condition.code + z.trial || subj.id),
+null <- glmer(other_pair ~ z.trial + order +
+  (1 + condition.code + z.trial | subj.id),
 data = xdata, family = binomial, control = contr
 )
 ```
@@ -165,7 +189,6 @@ tests <- drop1p(
 round(tests$drop1.res, 3)
 ## graphical depiction of the effects
 plot(effect("condition", full))
-plot(effect("experience", full))
 plot(effect("z.age", full))
 plot(effect("sex", full))
 plot(effect("z.trial", full))
@@ -194,10 +217,9 @@ xdata$order.dummy <- as.numeric(xdata$order == levels(xdata$order)[2])
 xdata$order.c <- xdata$order.dummy - mean(xdata$order.dummy)
 xdata$sex.dummy <- as.numeric(xdata$sex == levels(xdata$sex)[2])
 xdata$sex.c <- xdata$sex.dummy - mean(xdata$sex.dummy)
-xdata$experience.dummy <- as.numeric(xdata$experience == levels(xdata$experience)[2])
-xdata$experience.c <- xdata$experience.dummy - mean(xdata$experience.dummy)
+
 # fit model with centered predictors
-full.plot <- glmer(other_pair ~ condition + experience.c + z.age + sex.c + z.trial + order.c +
+full.plot <- glmer(other_pair ~ condition + z.age + sex.c + z.trial + order.c +
   (1 + condition + z.trial || subj.id),
 data = xdata, family = binomial, control = contr
 )
@@ -215,81 +237,52 @@ m.stab.plot(round(boot.res.plot$ci.estimates, 3))
 #estimates for the plot
 boot.res.plot$ci.predicted
 ```
+
 *Plots for the effect of test condition*
-```{r, echo=FALSE, fig1, fig.height = 2, fig.width = 2}
-#Plot for condition effect with model line
-boot.plot = as.data.frame(boot.res.plot$ci.predicted)
-rownames(boot.plot) = c("control", "test") #control = reveal-baited, test = reveal-empty
-boot.plot$condition = rownames(boot.plot)
-boot.plot$condition <- ordered(boot.plot$condition, levels = c("test", "control"))
-xdata$fitted = as.numeric((xdata$other_pair)) - 1
-theme_set( theme_gray()) 
-xdata$condition <- ordered(xdata$condition, levels = c("test", "control"))
-levels(xdata$condition)
-table(xdata$other_pair , xdata$condition)
-g <- ggplot(xdata, aes(x = condition , y = fitted, colour = condition))
-g <- g +  geom_jitter(width = 0.3, height = 0.03, alpha = 0.3)
-g <- g + geom_errorbar(aes(x=c("control"), 
-                             ymin=c(boot.plot$lower.cl[boot.plot$condition == "control"]),
-                             ymax=c(boot.plot$upper.cl[boot.plot$condition == "control"])),
-                         width=.125, colour="#00CDCD",
-                         position=position_dodge(0.9))
-g <- g + geom_errorbar(aes(x=c("test"), 
-                             ymin=c(boot.plot$lower.cl[boot.plot$condition == "test"]),
-                             ymax=c(boot.plot$upper.cl[boot.plot$condition == "test"])),
-                         width=.125, colour="#00CDCD",
-                         position=position_dodge(0.9))
-g <- g + geom_crossbar(data = boot.plot, aes(x=c("control", "test"), 
-                                                 y = fitted, 
-                                                 ymin= fitted,
-                                                 ymax= fitted), 
-                         width=0.5, colour= c("#00CDCD", "#00CDCD"))
-g <- g +  scale_x_discrete(name = NULL, labels = c("reveal empty cup", "reveal baited cup"))
-#g <- g + scale_y_continuous(labels = scales::percent_format(accuracy = 1))
-g <- g +scale_y_continuous(name = "predicted probability of other-pair choices", breaks = c(0, 0.2, 0.4, 0.6, 0.8, 1.0), labels = c("0.0", "0.2", "0.4", "0.6", "0.8", "1.0"))
-g = g + theme(legend.position = "none",
-                axis.text.x = element_text(size = 12, face=NULL, 
-                                           margin = margin(t = 1, r = 0, b = 1, l = 0, 
-                                                           unit = "mm")), 
-                axis.text.y = element_text(size = 12, face=NULL,
-                                           margin = margin(t = 0, r = 1, b = 0, l = 1, 
-                                                           unit = "mm")),
-                axis.title.x = element_text(size = 12, face=NULL,
-                                            margin = margin(t = 1.5, r = 1, b = 0, l = 0, 
-                                                            unit = "mm")),
-                axis.title.y = element_text(size = 12, face=NULL,
-                                            margin = margin(t = 1.5, r = 0, b = 0, l = 0, 
-                                                            unit = "mm")))
 
-g = g + scale_color_manual(values = c("#00CDCD", "#00CDCD"))  #, labels = c(" ", " "))
+```{r}
 
-g
-
-#ggsave(plot = g, filename = 'Follow.up.Experiment.Figure1.pdf', path = "./figures")
-```
+library(gghalves)
+library(ggthemes)
+library(cowplot)
 
 
-```{r,echo=FALSE, fig2, fig.height = 2.2, fig.width = 1.9}
-#Plot for within-subject effects
-sum.results = aggregate((as.numeric(xdata$other_pair[xdata$other_pair == "yes"]) - 1), 
-                        by = list(xdata$subj.id[xdata$other_pair == "yes"], 
-                                  xdata$condition[xdata$other_pair == "yes"]), 
-                        FUN = sum)
-colnames(sum.results) <- c("sub.id","condition", "other_pair")
-sum.results$condition <- ordered(sum.results$condition, levels = c("test", "control"))
-sum.results$other_pair <- sum.results$other_pair/16
+xdata.agg <- xdata %>%
+  mutate(other_pair2=as.numeric(other_pair)-1)%>%
+  group_by(subj.id, condition) %>%
+  summarise(mean.resp = mean(other_pair2)) %>%
+  ungroup()
+
+xdata.agg$condition2 <- jitter(as.numeric(as.factor(xdata.agg$condition), amount = .0001))
 
 
-#plot the result:
-#pdf("./figures/Follow.up.Experiment.Figure2.pdf")
-paired.data.plot(vector1=sum.results$other_pair[sum.results$condition == "test"], 
-                      vector2=sum.results$other_pair[sum.results$condition == "control"], xlab="", 
-                      ylab="proportion of other-pair choices", xnames=c("reveal empty cup", "reveal baited cup"), 
-                      size.fac=c(1, NA, -1), ylim=(c(-0.05,1.05)), size.by="circles", edge.width=0.2, n1=NULL, 
-                      n2=NULL, cex.lab=1, col.vec=NULL, lwd=1, bty="o", pch=NULL, lty=NULL, reset.par = TRUE,
-                      add.y.axis=T, up.down.ltys=NULL, cex.axis=1, cex.axis.lab=1, main=NULL, cex.main=1)
-#while (!is.null(dev.list()))  
-#dev.off()
+followup_plot <- ggplot(data = xdata.agg, aes(x = condition, y = mean.resp)) +
+  #geom_hline(yintercept = 2/3, lty = 2, col = "black", alpha=0.3) +
+  geom_point(data = xdata.agg %>% filter(condition == "control"), aes(x = condition2), color = "dodgerblue", size = 1.5, alpha = .5) +
+  geom_point(data = xdata.agg %>% filter(condition == "test"), aes(x = condition2), color = "darkorange", size = 1.5, alpha = .5, ) +
+  geom_line(aes(x = condition2, group = subj.id), color = "gray", lty = 1, alpha = .3) +
+  #geom_half_violin(data = xdata3.agg %>% filter(condition == "control"), aes(x = condition2, y = mean.resp), position = position_nudge(x = -.5), side = "l", width = .2, fill = "dodgerblue", alpha = .5) +
+  geom_half_boxplot(data = xdata.agg %>% filter(condition == "control"), aes(x = condition2, y = mean.resp), position = position_nudge(x = -.7),  width = .2, side = "r",outlier.shape = NA, center = TRUE, errorbar.draw = FALSE, fill = "dodgerblue", alpha = .5) +
+  #geom_half_violin(data = xdata3.agg %>% filter(condition == "test"), aes(x = condition2, y = mean.resp), position = position_nudge(x = 0.5), side = "r", width = .2, fill = "darkorange", alpha = .5) +
+  geom_half_boxplot(data = xdata.agg %>% filter(condition == "test"), aes(x = condition2, y = mean.resp), position = position_nudge(x = 0.5), width = .2, side = "r",outlier.shape = NA, center = TRUE, errorbar.draw = FALSE,  fill = "darkorange", alpha = .5) +
+    geom_errorbar(data = boot.res.plot$ci.predicted %>% filter(condition == "test"), aes(x = 2.3, y = fitted, ymin = lower.cl, ymax = upper.cl), color = "darkorange", width = 0.1, size = 0.6) +
+  geom_errorbar(data = boot.res.plot$ci.predicted %>% filter(condition == "control"), aes(x = 0.65, y = fitted, ymin = lower.cl, ymax = upper.cl), color = "dodgerblue", width = 0.1, size = 0.6) +
+  geom_point(data = boot.res.plot$ci.predicted %>% filter(condition == "test"), aes(x = 2.3, y = fitted), color = "darkorange", size = 1.5) +
+  geom_point(data = boot.res.plot$ci.predicted %>% filter(condition == "control"), aes(x = 0.65, y = fitted), color = "dodgerblue", size = 1.5) +
+
+
+  # Define additional settings
+  xlab("Condition") +
+  ylab("Proportion of other-pair choices") +
+  scale_x_continuous(breaks = c(0.75, 2.25), labels = c("Reveal baited", "Reveal empty"), limits = c(0,3)) +
+  ylim(0, 1) +
+  theme_classic()
+
+followup_plot
+
+ggsave(followup_plot, filename = "figures/Follow_up_Experiment_Figure3.png", width = 5, height = 5, scale = 0.55)
+
+
 ```
 
 
@@ -316,6 +309,99 @@ xdataind_test<- pivot_wider(xdataind_test, names_from= other_pair, values_from= 
 xdataind_test<- xdataind_test%>% select(subj.id, yes) %>% mutate(yes=yes/16)
 xdataind_test_plot <- ggplot(data = xdataind_test, aes(y = yes, x = subj.id)) +  geom_boxplot() + ylab("Proportion of other-pair choices \n in the reveal-empty condition") + xlab("")  + theme_minimal() + theme(axis.text.x = element_text(angle = 45, hjust=1)) + theme(axis.title = element_text(size = 15)) + theme(axis.text = element_text(size = 15))
 xdataind_test_plot
+```
+
+
+
+
+*secondary analysis*
+
+# To test the effect of previous experience
+
+*Fitting the full model*
+```{r, echo=FALSE}
+contr <- glmerControl(optimizer = "bobyqa", optCtrl = list(maxfun = 10000000))
+
+# fit full_with_exp model:
+full_with_exp <- glmer(other_pair ~ condition + z.age + sex + experience + z.trial + order +
+  (1 + condition.code + z.trial | subj.id),
+data = xdata, family = binomial, control = contr
+)
+## in this model we did include the correlation of random intercept and random slopes 
+```
+
+*Fitting the null_with_exp model*
+```{r, echo=FALSE}
+# fit null_with_exp model:
+null_with_exp <- glmer(other_pair ~ experience + z.trial + order +
+  (1 + condition.code + z.trial | subj.id),
+data = xdata, family = binomial, control = contr
+)
+```
+
+*Comparing full_with_exp and null_with_exp model*
+```{r, echo=FALSE}
+round(anova(full_with_exp, null_with_exp, test = "Chisq"), 3)
+```
+
+*Comparing full_with_exp and reduced models to get the effects of single predictors*
+```{r, echo=FALSE}
+tests <- drop1p(
+  model.res = full_with_exp, para = F, data =  NULL, contr = contr,
+  n.cores = c("all-1"), to.del = NULL
+)
+round(tests$drop1.res, 3)
+## graphical depiction of the effects
+plot(effect("condition", full_with_exp))
+plot(effect("experience", full_with_exp))
+plot(effect("z.age", full_with_exp))
+plot(effect("sex", full_with_exp))
+plot(effect("z.trial", full_with_exp))
+plot(effect("order", full_with_exp))
+```
+*Looking at the estimates of the fixed effects*
+```{r, echo=FALSE}
+round(summary(full_with_exp)$coefficients, 3)
+```
+
+*Calculating confidence intervals with 1000 bootstraps*
+```{r, echo=FALSE}
+# perform bootstraps for all predictors
+boot.res <- boot.glmm.pred(
+  model.res = full_with_exp, excl.warnings = T,
+  nboots = 1000, para = T, level = 0.95
+)
+round(boot.res$ci.estimates, 3)
+xx_with_exp <- as.data.frame(round(boot.res$ci.estimates, 3))
+xx_with_exp
+m.stab.plot(round(boot.res$ci.estimates, 3))
+
+# perform bootstraps for the main predictor of interest: condition (with the other predictors being at their average), this is necessary to plot the effect of condition
+# dummy code and center all factors but condition
+xdata$order.dummy <- as.numeric(xdata$order == levels(xdata$order)[2])
+xdata$order.c <- xdata$order.dummy - mean(xdata$order.dummy)
+xdata$sex.dummy <- as.numeric(xdata$sex == levels(xdata$sex)[2])
+xdata$sex.c <- xdata$sex.dummy - mean(xdata$sex.dummy)
+xdata$experience.dummy <- as.numeric(xdata$experience == levels(xdata$experience)[2])
+xdata$experience.c <- xdata$experience.dummy - mean(xdata$experience.dummy)
+# fit model with centered predictors
+full_with_exp.plot <- glmer(other_pair ~ condition + experience.c + z.age + sex.c + z.trial + order.c +
+  (1 + condition + z.trial || subj.id),
+data = xdata, family = binomial, control = contr
+)
+# perform bootstrap
+boot.res.plot <- boot.glmm.pred(
+  model.res = full_with_exp.plot, excl.warnings = T,
+  nboots = 1000, para = F, level = 0.95,
+  use = c("condition")
+)
+round(boot.res.plot$ci.estimates, 3)
+xx_with_exp <- as.data.frame(round(boot.res.plot$ci.estimates, 3))
+xx_with_exp
+m.stab.plot(round(boot.res.plot$ci.estimates, 3))
+
+#estimates for the plot
+boot.res.plot$ci.predicted
 ```
 
 
