--- a/analysis/disjSyl_analysis_script.Rmd
+++ b/analysis/disjSyl_analysis_script.Rmd
@@ -308,7 +308,7 @@ exp12_plot <- ggplot(data = xdata2.agg, aes(x = experiment, y = mean.resp)) +
   # Define additional settings
   xlab("") +
   ylab("Proportion of target-cup choices") +
-  scale_x_continuous(breaks = c(0.75, 2.25), labels = c("Experiment 1", "Experiment 2"), limits = c(0,3)) +
+  scale_x_continuous(breaks = c(0.75, 2.25), labels = c("Two-Cup Task\n", "Three-Cup Task\n"), limits = c(0,3)) +
   ylim(0, 1) +
   theme_classic()
 
@@ -554,7 +554,7 @@ xdata3.agg$condition2 <- jitter(as.numeric(as.factor(xdata3.agg$condition), amou
 
 
 exp3_plot <- ggplot(data = xdata3.agg, aes(x = condition, y = mean.resp)) +
-  geom_hline(yintercept = 1/3, lty = 2, col = "black", alpha=0.3) +
+  #geom_hline(yintercept = 1/3, lty = 2, col = "black", alpha=0.3) +
   geom_point(data = xdata3.agg %>% filter(condition == "control"), aes(x = condition2), color = "dodgerblue", size = 1.5, alpha = .5) +
   geom_point(data = xdata3.agg %>% filter(condition == "test"), aes(x = condition2), color = "darkorange", size = 1.5, alpha = .5, ) +
   geom_line(aes(x = condition2, group = subj.id), color = "gray", lty = 1, alpha = .3) +
@@ -571,7 +571,7 @@ exp3_plot <- ggplot(data = xdata3.agg, aes(x = condition, y = mean.resp)) +
   # Define additional settings
   xlab("") +
   ylab("Proportion of target-cup choices") +
-  scale_x_continuous(breaks = c(0.75, 2.25), labels = c("Control", "Test"), limits = c(0,3)) +
+  scale_x_continuous(breaks = c(0.75, 2.25), labels = c("Reveal Empty Cup\n Control", "Reveal Empty Cup\n Test"), limits = c(0,3)) +
   ylim(0, 1) +
   theme_classic()
 
@@ -847,7 +847,7 @@ xdata4.agg$condition2 <- jitter(as.numeric(as.factor(xdata4.agg$condition), amou
 
 
 exp4_plot <- ggplot(data = xdata4.agg, aes(x = condition, y = mean.resp)) +
-  geom_hline(yintercept = 2/3, lty = 2, col = "black", alpha=0.3) +
+  #geom_hline(yintercept = 2/3, lty = 2, col = "black", alpha=0.3) +
   geom_point(data = xdata4.agg %>% filter(condition == "control"), aes(x = condition2), color = "dodgerblue", size = 1.5, alpha = .5) +
   geom_point(data = xdata4.agg %>% filter(condition == "test"), aes(x = condition2), color = "darkorange", size = 1.5, alpha = .5, ) +
   geom_line(aes(x = condition2, group = subj.id), color = "gray", lty = 1, alpha = .3) +
@@ -864,7 +864,7 @@ exp4_plot <- ggplot(data = xdata4.agg, aes(x = condition, y = mean.resp)) +
   # Define additional settings
   xlab("") +
   ylab("Proportion of other-pair choices") +
-  scale_x_continuous(breaks = c(0.75, 2.25), labels = c("Control", "Test"), limits = c(0,3)) +
+  scale_x_continuous(breaks = c(0.75, 2.25), labels = c("Reveal Baited Cup\n Control", "Reveal Baited Cup\n Test"), limits = c(0,3)) +
   ylim(0, 1) +
   theme_classic()
 
@@ -1168,7 +1168,7 @@ exp34_plot <- ggplot(data = xdata3and4.agg, aes(x = experiment, y = mean.resp)) 
   # Define additional settings
   xlab("") +
   ylab("Proportion of other-pair choices") +
-  scale_x_continuous(breaks = c(0.75, 2.25), labels = c("Reveal empty", "Reveal baited"), limits = c(0,3)) +
+  scale_x_continuous(breaks = c(0.75, 2.25), labels = c("Reveal Empty Cup\n", "Reveal Baited Cup\n"), limits = c(0,3)) +
   ylim(0, 1) +
   theme_classic()
 
